<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crafty</string>
    <string name="settings">Settings</string>

    <!-- Error messages -->
    <string name="location_unknown">Unknown location</string>
    <string name="location_connection_failure">Failed to connect to location services</string>

    <!-- Launch strings -->
    <string name="location_settings_dialog_msg">Crafty uses your location to provide the best craft beer discovery experience. Enable your location?</string>
    <string name="location_settings_dialog_go">Go to settings</string>
    <string name="location_settings_dialog_no">No thanks</string>

    <!-- Main Activity strings -->
    <string name="menu_main_map_view">View on map</string>
    <string name="menu_main_list_view">View as list</string>
    <string name="menu_main_search">Search breweries</string>
    <string name="main_activity_location_waiting">Waiting for location...</string>
    <string name="main_activity_action_zoom_in">Zoom in</string>
    <string name="main_activity_action_zoom_out">Zoom out</string>
    <string name="main_activity_action_my_location">My location</string>
    <string name="main_activity_action_map_key">Show map key</string>

    <string name="brewery_list_empty">No matching\nbreweries nearby</string>

    <string name="feet_away">%.0f ft away</string>
    <string name="miles_away">%.1f mi away</string>

    <!-- Location type strings -->
    <string name="all_types">All Types</string>
    <string name="nano_brewery">Nano Breweries</string>
    <string name="office">Offices</string>
    <string name="tasting_room">Tasting Rooms</string>
    <string name="micro_brewery">Micro Breweries</string>
    <string name="production_facility">Production Facilities</string>
    <string name="restaurant_ale_house">Restaurants / Ale Houses</string>
    <string name="macro_breweries">Macro Breweries</string>
    <string name="brewpub">Brewpubs</string>

    <!-- Ordering strings -->
    <string-array name="sort_order">
        <item>Closest</item>
        <item>Alphabetical</item>
        <item>By Type</item>
    </string-array>

    <string name="search_hint">Search beer or place</string>
    <string name="search_empty">No results found</string>
    <string name="search_error">Error performing search</string>
    <string name="search_header_breweries">Breweries</string>
    <string name="search_header_beers">Beers</string>
    <string name="search_header_places">Places</string>
</resources>
