<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/theme_default_primary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center_vertical"
        android:paddingLeft="72dp">

        <Spinner
            android:id="@+id/type_spinner"
            android:background="?android:selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Map goes here-->

        <LinearLayout
            android:id="@+id/btn_container"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"

            android:gravity="center_vertical|right"
            android:orientation="horizontal"
            android:padding="@dimen/margin_xsmall">

            <com.akausejr.crafty.widget.FabImageButton
                android:id="@+id/btn_my_location"

                android:layout_width="@dimen/fab_button_diameter_small"
                android:layout_height="@dimen/fab_button_diameter_small"

                android:layout_margin="@dimen/margin_xsmall"

                android:contentDescription="@string/main_activity_action_my_location"
                android:background="@drawable/fab_bg_accent"
                android:src="@drawable/ic_my_location"

                android:elevation="@dimen/button_elevation"
                android:stateListAnimator="@anim/button_raise"  />

            <com.akausejr.crafty.widget.FabImageButton
                android:id="@+id/btn_zoom_in"

                android:layout_width="@dimen/fab_button_diameter_small"
                android:layout_height="@dimen/fab_button_diameter_small"

                android:layout_margin="@dimen/margin_xsmall"

                android:contentDescription="@string/main_activity_action_zoom_in"
                android:background="@drawable/fab_bg_accent"
                android:src="@drawable/ic_plus"

                android:elevation="@dimen/button_elevation"
                android:stateListAnimator="@anim/button_raise" />

            <com.akausejr.crafty.widget.FabImageButton
                android:id="@+id/btn_zoom_out"

                android:layout_width="@dimen/fab_button_diameter_small"
                android:layout_height="@dimen/fab_button_diameter_small"

                android:layout_margin="@dimen/margin_xsmall"

                android:contentDescription="@string/main_activity_action_zoom_out"
                android:background="@drawable/fab_bg_accent"
                android:src="@drawable/ic_minus"

                android:elevation="@dimen/button_elevation"
                android:stateListAnimator="@anim/button_raise" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>